<resources>
    <string name="app_name">8Bit bag BT control</string>
    <string name="bluetooth_on_off">Bluetooth On/Off</string>
    <string name="bluetooth_off">Bluetooth apagado</string>
    <string name="buscar">Buscar</string>
    <string name="bt_not_supported">Bluetooth no soportado</string>
    <string name="nombre_dispositivo">Nombre dispositivo</string>
    <string name="mac_dispositivo">Mac dispositivo</string>
    <string name="stop_search">Detener busqueda</string>
    <string name="start_search">Buscar</string>
    <string name="disconnect_device">Desconectar</string>
    <string name="led_red">led rojo</string>
    <string name="led_green">led verde</string>
    <string name="mode">Modo</string>
    <string name="brightness">Brillo</string>
    <string name="speed">Velocidad</string>
    <string name="send_text">Enviar texto</string>
    <string name="enter_text_here">Introduce texto aqui</string>
    <string name="introducir_texto">Introducir texto</string>
    <string name="leds_on_off">Leds On/Off</string>
    <string name="matrix_on_off">Matriz On/Off</string>
    <string name="select_color">Elegir color</string>
    <string name="device_name">Nombre dispositivo</string>
    <string name="device_mac">Mac dispositivo</string>
    <string name="start_effect">Start</string>
    <string name="stop_effect">Stop</string>
    <string name="extra_effect">Extra effect</string>
    <string name="snow_intensity">Intensidad de nieve</string>
</resources>
